--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -9,13 +9,18 @@ on:
 jobs:
   publish_image:
     runs-on: ubuntu-latest
+    services:
+      registry:
+        image: registry
+        ports:
+          - 5000:5000
     
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Build image
-        run: docker build -t localhost:8082/shlomi .
+        run: docker build -t localhost:5000/shlomi .
 
       - name: Push image to local registry
-        run: docker push localhost:8082/shlomi
+        run: docker push localhost:5000/shlomi
