--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -9,9 +9,15 @@ on:
 jobs:
   publish_image:
     runs-on: ubuntu-latest 
+    services:
+      registry:
+        image: registry
+        ports:
+          - 5000:5000
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
 
       - name: Generate current date and image name
         id: image_name
